force-app/main/default/objects/leankor__ValueStreamTemplate__c/leankor__ValueStreamTemplate__c.object-meta.xml
<CustomObject>
    <description>A template which can be cloned to create an initial Value Stream.</description>
    <label>Value Stream Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Value Stream Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Stream Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>