force-app/main/default/objects/leankor__ValueStreamTemplate__c/fields/leankor__CSSLayout__c.field-meta.xml
<CustomField>
    <fullName>leankor__CSSLayout__c</fullName>
    <description>The cascading style sheet (CSS) which defines the overall look and feel of the Value Streams which derive from this Value Stream Template.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Cut and paste the CSS which applies across the entire Value Stream Template into the field.</inlineHelpText>
    <label>CSS Layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>