force-app/main/default/objects/leankor__ValueStreamTemplate__c/fields/leankor__JSONWorkspace__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONWorkspace__c</fullName>
    <description>The structure of the value stream sub-sections or &quot;zones&quot; expressed in HTML.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the sub-section (zone) structure expressed as HTML</inlineHelpText>
    <label>JSON Workspace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>