force-app/main/default/objects/leankor__ValueStreamTemplate__c/fields/leankor__ToolbarDefinition__c.field-meta.xml
<CustomField>
    <fullName>leankor__ToolbarDefinition__c</fullName>
    <description>This is the HTML definition of the value stream toolbar.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Cut and paste into this field HTML which defines the structure of the Realtime Kanban toolbar which displays beside or above the value stream.</inlineHelpText>
    <label>Toolbar Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>